<resources>
    <string name="app_name">Leadersboard</string>]
    <string name="submit">Submit</string>
    <string name="skill_fragment_text">Skill IQ Leaders</string>
    <string name="learning_fragment_text">Learning Leaders</string>
    <string name="title_activity_leaders_board_main">LeadersBoardMain</string>
    <string name="tab_text_1">Learning Fragment</string>
    <string name="tab_text_2">Skill IQ Fragment</string>
    <string name="learning_hours_string">" learning hours, "</string>
    <string name="top_learner_badge">Top Learner Badge</string>
    <string name="title">Title</string>
    <string name="details">Details</string>
    <string name="skill_iq_score">" skill IQ Score, "</string>
    <string name="project_submission">Project Submission</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="email_address">Email Address</string>
    <string name="project_on_github_link">Project on GITHUB (link)</string>
    <string name="back_button">Back Button</string>
    <string name="logo">Logo</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="are_you_sure">Are You Sure ?</string>
    <string name="submission_success">Submission Successful</string>
    <string name="submission_failure">Submission not Successful</string>
    <string name="yes">Yes</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>