<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#000000"
    android:layout_height="match_parent"
    tools:context=".FormActivity">

    <ImageButton
        android:id="@+id/back_imageButton"
        android:layout_width="68dp"
        android:layout_marginLeft="20dp"
        android:layout_height="50dp"
        android:backgroundTint="#000000"
        android:contentDescription="@string/back_button"
        android:tint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/abc_vector_test" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="298dp"
        android:layout_height="86dp"
        android:background="#000000"
        android:src="@drawable/gads"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Project Submission"
        android:textColor="#ECC669"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:padding="24dp"
        android:layout_marginTop="48dp"
        android:background="#FBC02D"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.972"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            tools:ignore="MissingConstraints">


            <EditText
                android:id="@+id/edTextFirstName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="18dp"
                android:layout_weight="1"
                android:autofillHints="Project Link on Github"
                android:background="@drawable/form_round_corner"
                android:backgroundTint="#FFFFFF"
                android:ems="10"
                android:hint="@string/first_name"
                android:inputType="textPersonName"
                android:padding="8dp"
                android:singleLine="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/text_black"
                android:textStyle="bold"
                tools:layout_editor_absoluteY="391dp" />

            <EditText
                android:id="@+id/edTectLastName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="18dp"
                android:layout_weight="1"
                android:autofillHints="Project Link on Github"
                android:background="@drawable/form_round_corner"
                android:backgroundTint="#FFFFFF"
                android:ems="10"
                android:hint="@string/last_name"
                android:inputType="textPersonName"
                android:padding="8dp"
                android:singleLine="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/text_black"
                android:textStyle="bold"
                tools:layout_editor_absoluteY="391dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent">

            <EditText
                android:id="@+id/edTextEmail"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="18dp"
                android:layout_weight="1"
                android:autofillHints="Project Link on Github"
                android:background="@drawable/form_round_corner"
                android:backgroundTint="#FFFFFF"
                android:ems="10"
                android:hint="@string/email_address"
                android:inputType="textPersonName"
                android:padding="8dp"
                android:singleLine="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/text_black"
                android:textStyle="bold"
                tools:layout_editor_absoluteY="391dp" />

            <EditText
                android:id="@+id/edTextGithub"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="18dp"
                android:layout_weight="1"
                android:autofillHints="Project Link on Github"
                android:background="@drawable/form_round_corner"
                android:backgroundTint="#FFFFFF"
                android:ems="10"
                android:hint="@string/project_on_github_link"
                android:inputType="textPersonName"
                android:padding="8dp"
                android:singleLine="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/text_black"
                android:textStyle="bold"
                tools:layout_editor_absoluteY="391dp" />


            <Button
                android:id="@+id/submit_button"
                android:layout_width="157dp"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:background="@drawable/submit_btn_round_orange"
                android:text="@string/submit"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />


        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>